--- a/version.volume.html
+++ b/version.volume.html
@@ -3,6 +3,21 @@
 <meta name="mobile-web-app-capable" content="yes">
 <html><head>
 <link rel="stylesheet" href="stap.css"></link>
+
+<script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBtfGeqBIXdFmaFkmjY004cvb3SWOKyy-c",
+    authDomain: "vvve-56dc2.firebaseapp.com",
+    databaseURL: "https://vvve-56dc2.firebaseio.com",
+    projectId: "vvve-56dc2",
+    storageBucket: "vvve-56dc2.appspot.com",
+    messagingSenderId: "441698672673"
+  };
+  firebase.initializeApp(config);
+</script>
+
 <!-- <script src="https://rawgit.com/vdv7/stapjs/master/stap.js"></script> -->
 <script src="stap.js"></script>
 <script>
