firebase.html - took out default usrname

--- a/firebase.html
+++ b/firebase.html
@@ -27,7 +27,7 @@ function button(id){return {['@'+id]:false}};
 var task = {
 	
 	data:{},
-	usr:'chimeralabmturk@gmail.com',
+	usr:'',
 	pwd:'',
 	
 	start: function(){
