--- a/version.volume.html
+++ b/version.volume.html
@@ -387,7 +387,7 @@ var task = {
 			"Confidentiality: Participant data will be stored on Amazon Firebase, a secure cloud-based platform. Only mTurk-assigned worker IDs---which consist of random characters (e.g. A1235875436)---will be stored for payment purposes. No personally identifying information (e.g., names, emails, addresses) will be collected. The information that you give in the study will be handled confidentially. Your data will be anonymous which means that your name will not be collected or linked to the data.",
 			"Voluntary participation: Your participation in the study is completely voluntary.",		
 			"Right to withdraw from the study: You have the right to withdraw from the study at any time without penalty. How to withdraw from the study: If you want to withdraw from the study, you may simply close the study. There is no penalty for withdrawing. You will still receive full credit for the study. If you would like to withdraw after your materials have been submitted, please contact Claire La Fleur (claire.g.lafleur.ctr@mail.mil).",	
-			"Payment: You will receive a payment of $3.00 for participating in the study.",	
+			"Payment: You will receive a base payment of $1.50 for participating in the study. Score above 70% and you will receive a bonus of $1.50",	
 			"If you have questions about the study, contact:",	
 			"Claire-Genevieve La Fleur (claire.g.lafleur.ctr@mail.mil)",	
 			"Bldg. 519, Aberdeen Proving Ground",	
